# Nl_Creater

./: .gitignore  CMakeLists.txt
include/database/: inst.h  net.h  netlist.h  pin.h
include/parser/: parser.h
include/user/: construct.h  mynetlist.h  myparts.h  mypin.h  optimize.h
include/util/: common.h
src/main/: main.cpp  parser_verilog_file.cpp
src/user/: construct.cpp  mynetlist.cpp  mypin.cpp  optimize.cpp
